# OSPrac

./: .gitignore  README.md  box.pt  box_detector.md  box_detector.py  box_size_debug.py  box_size_helper.py  detect.md  distance.json  distance_to_pixels.py  frontier_core.py  jw_explorer_node.py  lidar_forward.py  presention.md  progress.md  requirements.txt  simple_lidar_yolo.py  test_yolov5_detect_box.py  발표자료.pptx
new_func/: detect_func.py  yolov5_singleton.py
src/tb4_target_selector/: CMakeLists.txt
src/tb4_target_selector/launch/: target_selector.launch.py
src/tb4_target_selector/msg/: BoxCandidateArray.msg
src/tb4_target_selector/new_func/: yolov5_singleton.py
src/tb4_target_selector/scripts/: box_size_debug_node.py  cv2_node.py  detect_func.py  map_box_selector_node.py  yolo_node.py
src/tb4_target_selector/srv/: BoxQuery.srv
tb4_target_selector/: CMakeLists.txt  package.xml
tb4_target_selector/msg/: BestTargetBox.msg  BoxCandidate.msg  Detection.msg
testcase/: test_box.json  test_object_box.json  test_short_box.json
