<?xml version="1.0"?>
<package format="3">
  <name>tb4_target_selector</name>
  <version>0.0.1</version>
  <description>
    TurtleBot4 + ROS2 Jazzy:
    - Subscribe YOLO detections (/yolo/detections)
    - Extract ROI from /map and estimate obstacle/structure boxes with OpenCV
    - Score candidates and publish /target_box_candidates and /best_target_box.
  </description>

  <maintainer email="maintainer@example.com">tb4_target_selector_maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake_python</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>